tests/baselines/reference/sideEffectImports1(module=commonjs,nouncheckedsideeffectimports=true).errors.txt
sideEffectImports1.ts(1,8): error TS2882: Cannot find module or type declarations for side-effect import of 'does-not-exist'.
sideEffectImports1.ts(2,8): error TS2882: Cannot find module or type declarations for side-effect import of './does-not-exist-either'.
sideEffectImports1.ts(3,8): error TS2882: Cannot find module or type declarations for side-effect import of './does-not-exist-either.js'.


==== sideEffectImports1.ts (3 errors) ====
    import "does-not-exist";
           ~~~~~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of 'does-not-exist'.
    import "./does-not-exist-either";
           ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of './does-not-exist-either'.
    import "./does-not-exist-either.js";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of './does-not-exist-either.js'.
    